<resources>
    <string name="app_name">GeoHole</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    Load Data
    <string name="dialog_title">Sincronizando información</string>
    <string name="dialog_message">Espere unos segundos</string>
    <string name="dialog_end">Sincronizando finalizada</string>

    <string name="title">SISTEMA DE UBICACIÓN GEOGRÁFICA PARA HUECOS</string>
    <string name="plaque">Placa</string>
    <string name="password">Contraseña</string>
    <string name="btn_login">ACCEDER</string>
    <string name="title_activity_mapa">Mapa</string>
    <string name="title_activity_geo">Map</string>
    <string name="guarda">Guarda</string>
    <string name="capturar">CAPTURAR</string>
    <string name="title_activity_foto">Foto</string>
    <string name="logo">Logo</string>
    <string name="enviar">ENVIAR</string>
    <string name="huecos_registrados">Huecos Registrados :</string>
    <string name="registrar_nuevo_hueco">REGISTRAR NUEVO HUECO</string>
    <string name="title_activity_eviado">Eviado</string>
    <string name="nuevo_registro">NUEVO REGISTRO</string>
    <string name="salir">SALIR</string>
    <string name="direcci_n">DIRECCIÓN</string>
    <string name="dimensiones">DIMENSIONES</string>
    <string name="numeral">#</string>
    <string name="largo_cm">Largo [cm]</string>
    <string name="ancho_cm">Ancho [cm]</string>
    <string name="profundo_cm">Profundo [cm]</string>
    <string name="cali">CALI</string>

    <!-- Sub dir -->
    <string-array name="combo_subdir">
        <item></item>
        <item>BIS</item>
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
        <item>E</item>
        <item>F</item>
        <item>G</item>
        <item>H</item>
    </string-array>

    <!-- Opedir -->
    <string-array name="combo_nomen">
        <item>CL</item>
        <item>CR</item>
        <item>TR</item>
        <item>DG</item>
        <item>AV</item>
        <item>AC</item>
        <item>AK</item>
    </string-array>
    <string name="title_activity_maps">Map</string>

    <!-- Login -->
    <string name="error_login">Datos incorrectos.</string>

    <!-- Maps -->
    <string name="my_location">Mi ubicación</string>
    <string name="error_maps">No se pudo obtener la dirección</string>
</resources>
