<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.Photo">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageViewLogF"
            android:layout_width="match_parent"
            android:layout_height="322dp"
            android:layout_gravity="right"
            android:contentDescription="@string/logo"
            app:layout_constraintBottom_toTopOf="@+id/buttonCap"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo" />

        <Button
            android:id="@+id/buttonCap"
            android:layout_width="190dp"
            android:layout_height="92dp"
            android:text="@string/capturar"
            app:layout_constraintBottom_toTopOf="@+id/btnSend"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageViewLogF" />

        <Button
            android:id="@+id/btnSend"
            android:layout_width="120dp"
            android:layout_height="66dp"
            android:text="@string/enviar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonCap" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>