<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.Geolocation">


    <LinearLayout
        android:id="@+id/EspacioMapa"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="526dp"
            android:drawingCacheQuality="auto"
            tools:context=".Geo" />

        <LinearLayout
            android:id="@+id/EspacioDatos"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline3"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:orientation="vertical" />

            <TextView
                android:id="@+id/textViewDirec"
                android:layout_width="wrap_content"
                android:layout_height="31dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/direcci_n"
                android:textStyle="bold" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:orientation="vertical" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/spinner1"
                    android:layout_width="62dp"
                    android:layout_height="wrap_content" />

                <EditText
                    android:id="@+id/editTextDP"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:autofillHints=""
                    android:ems="10"
                    android:gravity="start|top"
                    android:inputType="number"
                    android:maxLength="3"
                    android:numeric="integer" />

                <Spinner
                    android:id="@+id/spinner3"
                    android:layout_width="62dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <Spinner
                    android:id="@+id/spinner4"
                    android:layout_width="62dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Spinner
                        android:id="@+id/spinner2"
                        android:layout_width="62dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <EditText
                        android:id="@+id/editTextDir2"
                        android:layout_width="68dp"
                        android:layout_height="40dp"
                        android:layout_weight="1"
                        android:autofillHints=""
                        android:ems="10"
                        android:gravity="start|top"
                        android:inputType="number"
                        android:maxLength="3" />

                    <Spinner
                        android:id="@+id/spinner5"
                        android:layout_width="62dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/numeral"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/numeral" />

                        <EditText
                            android:id="@+id/editTextDir3"
                            android:layout_width="52dp"
                            android:layout_height="40dp"
                            android:layout_weight="1"
                            android:ems="10"
                            android:gravity="start|top"
                            android:inputType="number"
                            android:maxLength="3"
                            android:numeric="signed|decimal" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline4"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:orientation="vertical" />

            <TextView
                android:id="@+id/textViewDirGPS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_horizontal"
                android:gravity="center|center_horizontal|center_vertical"
                android:text="@string/cali"
                android:visibility="invisible" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />

            <TextView
                android:id="@+id/textViewMaphueco"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:text="@string/dimensiones"
                android:textStyle="bold" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:orientation="vertical" />

            <LinearLayout
                android:layout_width="331dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="32dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/largo_cm" />

                    <EditText
                        android:id="@+id/editTextLargo"
                        android:layout_width="67dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:autofillHints=""
                        android:ems="10"
                        android:inputType="number"
                        android:maxLength="4" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="222dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="64dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/ancho_cm" />

                        <EditText
                            android:id="@+id/editText4"
                            android:layout_width="67dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:autofillHints=""
                            android:ems="10"
                            android:inputType="number"
                            android:maxLength="4" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/textView3"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/profundo_cm" />

                            <EditText
                                android:id="@+id/editText5"
                                android:layout_width="73dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:autofillHints=""
                                android:ems="10"
                                android:inputType="number"
                                android:maxLength="4" />
                        </LinearLayout>

                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/buttonRegistro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_horizontal|center_vertical"
                android:onClick="foto"
                android:text="@string/registrar_nuevo_hueco" />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>